# yaml2pac

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/generate/: common_csr.rs  common_i2c.rs  enumm.rs  fieldset.rs  i2cdev.rs  mod.rs  rvcsr.rs
tests/: gen_modes.rs
tests/fixtures/: csr_minimal.yaml  i2c_sensor.yaml  pac_timer.yaml
