[package]
name = "yaml2pac"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/embedded-drivers/yaml2pac"
documentation = "https://docs.rs/yaml2pac"
homepage = "https://github.com/embedded-drivers/yaml2pac"
categories = ["development-tools", "embedded"]
description = "Generate PAC from YAML"
keywords = ["pac", "yaml", "svd"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
regex = "1.7.1"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
chiptool = { git = "https://github.com/ch32-rs/chiptool", rev = "1c198ae678ebd426751513f0deab6fbd6f8b8211" }
# chiptool = { path = "../chiptool" }
serde_json = "1.0"
quote = "1.0.37"
clap = { version = "4.5.22", features = ["derive"] }
