[package]
name = "yaml2pac"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/embedded-drivers/yaml2pac"
documentation = "https://docs.rs/yaml2pac"
homepage = "https://github.com/embedded-drivers/yaml2pac"
categories = ["development-tools", "embedded"]
description = "Multi-mode register code generator: PAC (MMIO), RISC-V CSR, I2C device"
keywords = ["pac", "yaml", "svd", "csr", "i2c"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
regex = "1.7.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "=0.9.34-deprecated"
chiptool = { git = "https://github.com/embassy-rs/chiptool", rev = "6a8c2aa32e84baf71a8482bd0dda671ca95e7207" }
serde_json = "1.0"
quote = "1.0.37"
proc-macro2 = "1.0"
clap = { version = "4.5.22", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
